@@ -9,9 +9,14 @@ expressions and text manipulations to do its work.
 """
 __author__ = 'Martin Blais <blais@furius.ca>'
 
+import collections
 import io
 import re
 import sys
+
+
+# A regular expression that matches an account name.
+ACCOUNT_RE = '([A-Z][A-Za-z0-9\-]+)(:[A-Z][A-Za-z0-9\-]+)+'
 
 
 def align_beancount(contents):
@@ -27,17 +32,26 @@ def align_beancount(contents):
     # Find all lines that have a number in them and calculate the maximum length
     # of the stripped prefix and the number.
     match_pairs = []
-    max_prefix_width = 0
-    max_num_width = 0
     for index, line in enumerate(contents.splitlines()):
         match = re.match(r'([^";]*?)\s+([-+]?\s*\d+(?:\.\d*)?)\s+([A-Z0-9]+\b.*)', line)
         if match:
             prefix, number, rest = match.groups()
             match_pairs.append((prefix, number, rest))
-            max_prefix_width = max(max_prefix_width, len(prefix))
-            max_num_width = max(max_num_width, len(number))
         else:
             match_pairs.append((line, None, None))
+
+    # Normalize whitespace before lines that has some indent and an account
+    # name.
+    norm_match_pairs = normalize_indent_whitespace(match_pairs)
+
+    # Compute the maximum widths.
+    max_prefix_width = max(len(prefix)
+                           for prefix, number, _ in match_pairs
+                           if number is not None)
+
+    max_num_width = max(len(number)
+                        for _, number, _ in match_pairs
+                        if number is not None)
 
     # Create a format that will admit the maximum width of all prefixes equally.
     line_format = '{{:<{prefix_width}}}  {{:>{num_width}}} {{}}'.format(
@@ -46,7 +60,7 @@ def align_beancount(contents):
 
     # Process each line to an output buffer.
     output = io.StringIO()
-    for prefix, number, rest in match_pairs:
+    for prefix, number, rest in norm_match_pairs:
         if number is None:
             output.write(prefix)
         else:
@@ -63,6 +77,58 @@ def align_beancount(contents):
             re.sub(r'[ \t]+', ' ', formatted_contents.rstrip()))
 
     return formatted_contents
+
+
+# Note: This is generic, could be moved to utils.
+def compute_most_frequent(iterable):
+    """Compute the frequencies of the given elements and return the most frequent.
+
+    Args:
+      iterable: A collection of hashable elements.
+    Returns:
+      The most frequent element. If there are no elements in the iterable,
+      return None.
+    """
+    frequencies = collections.defaultdict(int)
+    for element in iterable:
+        frequencies[element] += 1
+    if not frequencies:
+        return None
+    counts = sorted((count, element)
+                    for element, count in frequencies.items())
+    # Note: In case of a tie, this chooses the longest width.
+    # We could eventually make this an option.
+    return counts[-1][1]
+
+
+def normalize_indent_whitespace(match_pairs):
+    """Normalize whitespace before lines that has some indent and an account name.
+
+    Args:
+      match_pairs: A list of (prefix, number, rest) tuples.
+    Returns:
+      Another list of (prefix, number, rest) tuples, where prefix may have been
+      adjusted with a different whitespace prefi.
+    """
+    # Compute most frequent account name prefix.
+    match_posting = re.compile(r'([ \t]+)({})'.format(ACCOUNT_RE)).match
+    width = compute_most_frequent(
+        len(match.group(1))
+        for match in (match_posting(prefix)
+                      for prefix, _, _ in match_pairs)
+        if match is not None)
+    if width:
+        norm_format = ' ' * width + '{}'
+
+    # Make the necessary adjustments.
+    adjusted_pairs = []
+    for tup in match_pairs:
+        prefix, number, rest = tup
+        match = match_posting(prefix)
+        if match is not None:
+            tup = (norm_format.format(match.group(2)), number, rest)
+        adjusted_pairs.append(tup)
+    return adjusted_pairs
 
 
 def main():
