@@ -51,3 +51,35 @@ class TestScriptFormat(test_utils.TestCase):
             Assets:Cash
 
         """), stdout.getvalue())
+
+    @test_utils.docfile
+    def test_align_posting_starts(self, filename):
+        """
+          2014-03-01 * "Something"
+            Expenses:Restaurant   50.01 USD
+            Assets:Cash
+
+          2014-03-02 * "Something"
+           Expenses:Restaurant    50.02 USD
+              Assets:Cash
+
+          2014-03-03 * "Something"
+            Expenses:Restaurant   50.03 USD
+            Assets:Cash
+        """
+        with test_utils.capture() as stdout:
+            result = test_utils.run_with_args(format.main, [filename])
+        self.assertEqual(0, result)
+        self.assertEqual(textwrap.dedent("""
+          2014-03-01 * "Something"
+            Expenses:Restaurant  50.01 USD
+            Assets:Cash
+
+          2014-03-02 * "Something"
+            Expenses:Restaurant  50.02 USD
+            Assets:Cash
+
+          2014-03-03 * "Something"
+            Expenses:Restaurant  50.03 USD
+            Assets:Cash
+        """), stdout.getvalue())
